clearer messages of intent on websites

--- a/app/views/App/Index.html
+++ b/app/views/App/Index.html
@@ -7,7 +7,7 @@
   <div class="container">
     <div class="row">
       <h1>Welcome to the Cloud Native Computing Team</h1>
-      <p>The purpose of this service is to automate the preparation of a new CNCT employee's technical onboarding, as a list of tasks, represented as issues in GitHub.</p>
+      <p>The purpose of this service is to automate the preparation of a training or onboarding course, as a list of tasks, represented as issues in GitHub.</p>
     </div>
   </div>
 </header>
@@ -17,15 +17,9 @@
 </div>
 
 <p>
-  <ol>
-    <li>Click the below <strong>Authorize</strong> button to first login into your Github account and
-        allow this service to create tasks on your behalf. Then this service will:</li>
-    <li>Create a <a href="https://help.github.com/articles/about-milestones/">Milestone</a>
-        and a <a href="https://help.github.com/articles/about-project-boards/">Project</a> in GitHub.</li>
-    <li>Create <a href="https://help.github.com/articles/about-issues/">Issues</a> in Github to represent
-        onboarding tasks, and link them to the Milestone and Project.</li>
-    <li>Assigns those issues to your Github user.</li>
-  </ol>
+  Click the below <strong>Authorize</strong> button to first login into your Github account and
+  allow this service to create tasks on your behalf. <br>
+  On the next page, you will be able to choose from a selection of tracks to create a task board tailored to your use.
 </p>
 <p>
   <a class="btn btn-lg btn-primary" href="/auth">Authorize</a>
